; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/lwbt/extr_btpbuf.c_btpbuf_ref.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/lwbt/extr_btpbuf.c_btpbuf_ref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pbuf = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @btpbuf_ref(%struct.pbuf* %0) #0 {
  %2 = alloca %struct.pbuf*, align 8
  %3 = alloca i32, align 4
  store %struct.pbuf* %0, %struct.pbuf** %2, align 8
  %4 = load %struct.pbuf*, %struct.pbuf** %2, align 8
  %5 = icmp ne %struct.pbuf* %4, null
  br i1 %5, label %6, label %15

6:                                                ; preds = %1
  %7 = load i32, i32* %3, align 4
  %8 = call i32 @_CPU_ISR_Disable(i32 %7)
  %9 = load %struct.pbuf*, %struct.pbuf** %2, align 8
  %10 = getelementptr inbounds %struct.pbuf, %struct.pbuf* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = add nsw i32 %11, 1
  store i32 %12, i32* %10, align 4
  %13 = load i32, i32* %3, align 4
  %14 = call i32 @_CPU_ISR_Restore(i32 %13)
  br label %15

15:                                               ; preds = %6, %1
  ret void
}

declare dso_local i32 @_CPU_ISR_Disable(i32) #1

declare dso_local i32 @_CPU_ISR_Restore(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
